--- a/album-website.html
+++ b/album-website.html
@@ -9,7 +9,7 @@
 	</style>
 	<h1><center><p style="font-family: Garamond;color:#ffffff; font-size:25pt; font-style:normal; ;"> Saint Motel</p></center></h1>
 <center><p style="font-family: Garamond;color:#ffffff; font-size:15pt; font-style:italic; ;"> an indie-pop American band starring the members A/J Jackson, Aaron Sharp, Dak Lerdamornpong, and Greg Erwin. </p></center>
-<h2><center><img src=C:saint.png></center></h2>
+<h2><center><img src="saint.png"></center></h2>
 	<h3><center><p style="font-family: Garamond;color:#ffffff; font-size:35pt; font-style:normal; ;"> Saint Motel Television</p></center></h3>
 	<center><p style="font-family: Garamond;color:#ffffff; font-size:15pt; font-style:italic; ;">an album featuring these hits</p></center>
 	<title>Saint Motel Television Album Website</title>
